--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                 </div>
                 <div class="text pl-3">
                   <h2>MLOps Engineer</h2>
-                  <span class="position">Matakiri Tumaini org</span>
+                  <span class="position">Matakiri Tumaini Org</span>
                   <p class="date">Sept 2024 - Present</p>
                   <div class="c d-flex ftco-animate">
                     <div
